<resources>
    <string name="app_name">WhatsApp</string>
    <string name="descricaoLogo">imagem de logo do whatsapp</string>
    <string name="hintNome">Digite seu nome</string>
    <string name="hintTelefonePais">+55</string>
    <string name="hintTelefoneArea">11</string>
    <string name="hintTelefone">999655305</string>
    <string name="botaoCadastrar">Cadastrar</string>
    <string name="textoValidacao">Validação</string>
    <string name="textoFraseValidacao">Você receberá um SMS para validação do seu número de telefone. Digite o código de validação abaixo:</string>
    <string name="botaoValidar">Validar</string>
    <string name="hintCodigo">Digite seu código</string>
    <string name="hintEmail">Digite seu E-mail</string>
    <string name="hintSenha">Digite sua senha</string>
    <string name="textoBoasVindas">Bem vindo ao Whatsapp. Conecte-se abaixo</string>
    <string name="conectar">Conectar</string>
    <string name="semConta">Não tem uma conta? Cadastre-se agora</string>
    <string name="botaoDesconectar">Desconectar</string>
    <string name="opcoes">Opções</string>
    <string name="desconectar">Desconectar</string>
    <string name="configuracoes">Configurações</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="adicionarContato">Adicionar Contato</string>
    <string name="status">Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
