<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".CadastroActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/larguraLogo"
        android:layout_height="@dimen/alturaLogo"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:contentDescription="@string/descricaoLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/campoNome"
        android:layout_width="@dimen/larguraCampos"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:digits=" abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZãáóúéêâôíõ"
        android:ems="10"
        android:hint="@string/hintNome"
        android:inputType="textPersonName"
        android:nextFocusRight="@id/campoEmail"
        android:nextFocusDown="@id/campoEmail"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/botaoCadastrar"
        android:layout_width="@dimen/larguraCampos"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:background="@color/cinza"
        android:text="@string/botaoCadastrar"
        android:textColor="@android:color/black"
        android:textColorHighlight="@color/branco"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoPais" />

    <EditText
        android:id="@+id/campoEmail"
        android:layout_width="@dimen/larguraCampos"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:theme="@style/botaoPadrao"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.@-_0123456789"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:nextFocusLeft="@id/campoNome"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoNome" />

    <EditText
        android:id="@+id/campoSenha"
        android:layout_width="@dimen/larguraCampos"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:ems="10"
        android:hint="@string/hintSenha"
        android:inputType="textPassword"
        android:nextFocusLeft="@id/campoEmail"
        android:nextFocusRight="@id/campoPais"
        android:nextFocusUp="@id/campoEmail"
        android:nextFocusDown="@id/campoPais"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoEmail" />

    <EditText
        android:id="@+id/campoPais"
        android:layout_width="@dimen/larguraCamposPaisArea"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hintTelefonePais"
        android:inputType="number"
        android:nextFocusLeft="@id/campoSenha"
        android:nextFocusRight="@id/campoArea"
        android:nextFocusUp="@id/campoSenha"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/campoArea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoSenha" />

    <EditText
        android:id="@+id/campoArea"
        android:layout_width="@dimen/larguraCamposPaisArea"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hintTelefoneArea"
        android:inputType="number"
        android:nextFocusLeft="@id/campoPais"
        android:nextFocusRight="@id/campoTelefone"
        android:nextFocusUp="@id/campoSenha"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/campoTelefone"
        app:layout_constraintStart_toEndOf="@+id/campoPais"
        app:layout_constraintTop_toBottomOf="@+id/campoSenha" />

    <EditText
        android:id="@+id/campoTelefone"
        android:layout_width="@dimen/larguraCampoTelefone"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hintTelefone"
        android:inputType="number"
        android:nextFocusLeft="@id/campoArea"
        android:nextFocusUp="@id/campoSenha"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/campoArea"
        app:layout_constraintTop_toBottomOf="@+id/campoSenha" />

</android.support.constraint.ConstraintLayout>